# Heapy

./: .gitignore  CMakeLists.txt  COPYING.txt  Heapy.cpp  Heapy.sln  HeapyInject.cpp  Readme.md  inject_dll.cpp
CreateRelease/: CreateRelease.bat  ProfileTestApplication_Win32.bat  ProfileTestApplication_x64.bat  Readme.txt
Heapy/: Heapy.cpp  Heapy.vcxproj  Heapy.vcxproj.filters
HeapyInject/: HeapProfiler.cpp  HeapProfiler.h  HeapyInject.cpp  HeapyInject.vcxproj  HeapyInject.vcxproj.filters
ProfileTestApplication/: ProfileTestApplication.vcxproj
TestApplication/: Main.cpp  TestApplication.vcxproj
libMinHook/: libMinHook.vcxproj  libMinHook.vcxproj.filters
libs/: CMakeLists.txt  Where these are from.txt
libs/MinHook/: MinHook.vcxproj  MinHook.vcxproj.filters
libs/MinHook/src/: hook.cpp  trampoline.cpp
libs/MinHook/src/HDE32/: hde32.h
libs/MinHook/src/HDE64/include/: hde64.h
